<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundColor"
    android:padding="@dimen/margin_large">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:layout_marginBottom="@dimen/margin_large"/>

    <!-- Campo de correo -->
    <EditText
        android:id="@+id/txtEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:padding="@dimen/margin_small"
        android:backgroundTint="@color/primaryColor"/>

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/txtPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:padding="@dimen/margin_small"
        android:backgroundTint="@color/primaryColor"/>

    <!-- Botón de login -->
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/primaryColor"
        android:textColor="@color/backgroundColor"/>

    <!-- Ir a registro -->
    <TextView
        android:id="@+id/txtGoRegister"
        android:text="@string/txt_ir_a_registro"
        android:textColor="@color/accentColor"
        android:textSize="@dimen/text_size_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGithub"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/iniciar_con_github"
        android:textColor="@android:color/white" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_con_facebook" />



</LinearLayout>
