<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <!-- Nombre -->
        <TextView
            android:id="@+id/tvNombreCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre_cliente"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:layout_marginBottom="@dimen/margin_small"/>

        <!-- Correo -->
        <TextView
            android:id="@+id/tvCorreoCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_cliente"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textSecondary"/>

        <!-- Teléfono -->
        <TextView
            android:id="@+id/tvTelefonoCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono_cliente"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textSecondary"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btnEditarCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_editar"
                android:textColor="@color/backgroundColor"
                android:background="@color/primaryColor"/>

            <Button
                android:id="@+id/btnEliminarCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eliminar"
                android:textColor="@color/backgroundColor"
                android:background="@color/accentColor"
                android:layout_marginStart="@dimen/margin_small"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
